@@ -4,6 +4,7 @@
 	* Remove EXSIG.
 	* Do not close stderr when /dev/tty fails to open.
 	* Allow newlines after var name in for statements.
+	* Use CHKNL to parse case statements.
 
 2009-01-14  Herbert Xu <herbert@gondor.apana.org.au>
 
